
[package]
name = "solana-basic"
version = "1.0.0"
description = "basic solana program written in Rust"
authors = ["commonlot"]
repository = "https://github.com/phanlancer/solana-basic"
license = "Apache-2.0"
homepage = "https://phanlancerduk.com/"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.3"
solana-program = "1.17.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
